исправляет неровности в разметке

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           </div>
           <ul class="gallery">
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/technokryak.jpg" alt="" />
                   <div class="overlay">
@@ -71,7 +71,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/neworlean.jpg" alt="" />
                   <div class="overlay">
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/seafood.jpg" alt="" />
                   <div class="overlay">
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/prime.jpg" alt="" />
                   <div class="overlay">
@@ -116,7 +116,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/boxes.jpg" alt="" />
                   <div class="overlay">
@@ -131,7 +131,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/inspiration.jpg" alt="" />
                   <div class="overlay">
@@ -146,7 +146,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/limitededition.jpg" alt="" />
                   <div class="overlay">
@@ -161,7 +161,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/lab.jpg" alt="" />
                   <div class="overlay">
@@ -176,7 +176,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="item-box">
                 <div class="overlay-box">
                   <img src="./images/growing.jpg" alt="" />
                   <div class="overlay">
