--- a/index.html
+++ b/index.html
@@ -56,26 +56,36 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-list">
             <li class="features-item antenna-icon">
-              <p class="features-title">Внимание к деталям</p>
-              <p class="features-text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
+              <div>
+                <p class="features-title">Внимание к деталям</p>
+                <p class="features-text">
+                  Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </p>
+              </div>
             </li>
             <li class="features-item clock-icon">
-              <p class="features-title">Пунктуальность</p>
-              <p class="features-text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
+              <div>
+                <p class="features-title">Пунктуальность</p>
+                <p class="features-text">
+                  Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                </p>
+              </div>
             </li>
             <li class="features-item diagram-icon">
-              <p class="features-title">Планирование</p>
-              <p class="features-text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
+              <div>
+                <p class="features-title">Планирование</p>
+                <p class="features-text">
+                  Равным образом консультация с широким активом в значительной степени обуславливает.
+                </p>
+              </div>
             </li>
             <li class="features-item astronaut-icon">
-              <p class="features-title">Современные технологии</p>
-              <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+              <div>
+                <p class="features-title">Современные технологии</p>
+                <p class="features-text">
+                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
