--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
             </li>
             <li class="features-item clock-icon">
-              <div>
+              <div class="">
                 <p class="features-title">Пунктуальность</p>
                 <p class="features-text">
                   Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
