--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <header class="header">
       <div class="container">
         <div class="header-flex">
+          <a href="index.html" class="logo"><span class="accent">Web</span>Studio</a>
+
           <nav class="nav">
-            <a href="index.html" class="logo nav-item"><span class="accent">Web</span>Studio</a>
             <ul class="nav-item">
               <li class="nav-link"><a href="index.html" class="current">Студия</a></li>
               <li class="nav-link"><a href="portfolio.html">Портфолио</a></li>
@@ -44,7 +45,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -310,8 +311,8 @@
           </ul>
         </div>
       </section>
-    </main>
-    <footer class="footer">
+    </main> -->
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-section address">
           <a href="index.html" class="logo-footer"><span class="accent">Web</span>Studio</a>
@@ -375,8 +376,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-btn" data-modal-close>X</button>
         <p class="form-text">Оставьте свои данные, мы вам перезвоним</p>
@@ -420,6 +421,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
