--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,12 @@
     <header class="header">
       <div class="container">
         <div class="header-flex">
+          <a href="index.html" class="logo"><span class="accent">Web</span>Studio</a>
+
           <nav class="nav">
-            <a href="index.html" class="logo nav-item"><span class="accent">Web</span>Studio</a>
             <ul class="nav-item">
-              <li class="nav-link"><a href="index.html">Студия</a></li>
-              <li class="nav-link"><a href="portfolio.html" class="current">Портфолио</a></li>
+              <li class="nav-link"><a href="index.html" class="current">Студия</a></li>
+              <li class="nav-link"><a href="portfolio.html">Портфолио</a></li>
               <li class="nav-link"><a href="">Контакты</a></li>
             </ul>
           </nav>
