--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         </div>
       </div>
     </header>
-    <!-- <main>
+    <main>
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="button button-text" data-modal-open>Заказать услугу</button>
         </div>
       </section>
-      <section class="section features">
+      <!-- <section class="section features">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-list">
@@ -80,8 +80,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section work-sect">
+      </section> -->
+      <!-- <section class="section work-sect">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-examples">
@@ -105,8 +105,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section team-sect">
+      </section> -->
+      <!-- <section class="section team-sect">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-cards">
@@ -260,9 +260,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="section clients-sect">
+      <!-- <section class="section clients-sect">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="client-list">
@@ -310,8 +310,8 @@
             </li>
           </ul>
         </div>
-      </section>
-    </main> -->
+      </section> -->
+    </main>
     <!-- <footer class="footer">
       <div class="container">
         <div class="footer-section address">
