--- a/index.html
+++ b/index.html
@@ -52,36 +52,46 @@
           <button type="button" class="button button-text" data-modal-open>Заказать услугу</button>
         </div>
       </section>
-      <!-- <section class="section features">
+      <section class="section features">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-list">
             <li class="features-item antenna-icon">
-              <p class="features-title">Внимание к деталям</p>
-              <p class="features-text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
+              <div class="features-box">
+                <p class="features-title">Внимание к деталям</p>
+                <p class="features-text">
+                  Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </p>
+              </div>
             </li>
             <li class="features-item clock-icon">
-              <p class="features-title">Пунктуальность</p>
-              <p class="features-text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
+              <div class="features-box">
+                <p class="features-title">Пунктуальность</p>
+                <p class="features-text">
+                  Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                </p>
+              </div>
             </li>
             <li class="features-item diagram-icon">
-              <p class="features-title">Планирование</p>
-              <p class="features-text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
+              <div class="features-box">
+                <p class="features-title">Планирование</p>
+                <p class="features-text">
+                  Равным образом консультация с широким активом в значительной степени обуславливает.
+                </p>
+              </div>
             </li>
             <li class="features-item astronaut-icon">
-              <p class="features-title">Современные технологии</p>
-              <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+              <div class="features-box">
+                <p class="features-title">Современные технологии</p>
+                <p class="features-text">
+                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section work-sect">
+      </section>
+      <section class="section work-sect">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-examples">
@@ -105,8 +115,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section team-sect">
+      </section>
+      <section class="section team-sect">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-cards">
@@ -260,9 +270,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="section clients-sect">
+      <section class="section clients-sect">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="client-list">
@@ -310,7 +320,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container">
