--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-section address">
           <a href="index.html" class="logo-footer"><span class="accent">Web</span>Studio</a>
@@ -386,7 +386,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-btn" data-modal-close>X</button>
