--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section address">
-          <a href="index.html" class="logo-footer"><span class="accent">Web</span>Studio</a>
+          <a href="index.html" class="logo"><span class="accent">Web</span>Studio</a>
           <address>
             <ul>
               <li class="address-item">
