--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
             <li class="gallery-item">
               <a href="#" class="item-box">
                 <div class="overlay-box">
-                  <img src="./images/technokryak.jpg" alt="" />
+                  <img src="./images/technokryak-mob.jpg" alt="" />
                   <div class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                     для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -198,7 +198,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section address">
-          <a href="index.html" class="logo-footer"><span class="accent">Web</span>Studio</a>
+          <a href="index.html" class="logo"><span class="accent">Web</span>Studio</a>
           <address>
             <ul>
               <li class="address-item">
