--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
             <li class="gallery-item">
               <a href="#" class="item-box">
                 <div class="overlay-box">
-                  <img src="./images/technokryak-mob.jpg" alt="" />
+                  <img src="./images/technokryak.jpg" alt="" />
                   <div class="overlay">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                     для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -112,7 +112,7 @@
                 </div>
                 <div class="gallery-item-description">
                   <h2 class="title">Проект Prime</h2>
-                  <p>Маркетинг</p>
+                  <p class="description">Маркетинг</p>
                 </div>
               </a>
             </li>
