--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
                 </p>
               </div>
             </li>
-            <li class="features-item clock-icon">
-              <div class="features-box">
+            <li class="features-item">
+              <div class="features-box clock-icon">
                 <p class="features-title">Пунктуальность</p>
                 <p class="features-text">
                   Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                 </p>
               </div>
             </li>
-            <li class="features-item diagram-icon">
-              <div class="features-box">
+            <li class="features-item">
+              <div class="features-box diagram-icon">
                 <p class="features-title">Планирование</p>
                 <p class="features-text">
                   Равным образом консультация с широким активом в значительной степени обуславливает.
                 </p>
               </div>
             </li>
-            <li class="features-item astronaut-icon">
-              <div class="features-box">
+            <li class="features-item">
+              <div class="features-box astronaut-icon">
                 <p class="features-title">Современные технологии</p>
                 <p class="features-text">
                   Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -123,30 +123,21 @@
             <li class="team-card">
               <picture>
                 <source
-                  srcset="./images/desctop-igor1x.webp 1x, ./images/desctop-igor@2x.webp 2x"
+                  srcset="./images/igor-desktop.webp 1x, ./images/igor-desktop@2x.webp 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/desctop-igor1x.jpg 1x, ./images/desctop-igor@2x.jpg 2x"
+                  srcset="./images/igor-desktop.jpg 1x, ./images/igor-desktop@2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/tablet-igor1x.webp 1x, ./images/tablet-igor@2x.jpg 2x"
+                  srcset="./images/igor-tablet.webp 1x, ./images/igor-tablet@2x.jpg 2x"
                   media="(min-width: 768px)"
                 />
-                <source
-                  srcset="./images/tablet-igor1x.jpg 1x, ./images/tablet-igor@2x.jpg"
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="./images/smart-igor1x.webp 1x, ./images/smart-igor@2x.webp 2x"
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="./images/smart-igor1x.jpg 1x, ./images/smart-igor@2x.jpg 2x"
-                  media="(min-width: 320px)"
-                />
-                <img src="./images/igor-mobile1x.jpg" alt="фото Игоря Демьяненко" class="picture-img" />
+                <source srcset="./images/igor.-tablet.jpg 1x, ./images/igor-tablet@2x.jpg" media="(min-width: 768px)" />
+                <source srcset="./images/igor.webp 1x, ./images/igor@2x.webp 2x" media="(min-width: 320px)" />
+                <source srcset="./images/igor.jpg 1x, ./images/igor@2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/igor.jpg" alt="фото Игоря Демьяненко" class="picture-img" />
               </picture>
               <div class="card-content">
                 <h3 class="card-title">Игорь Демьяненко</h3>
@@ -186,30 +177,24 @@
             <li class="team-card">
               <picture>
                 <source
-                  srcset="./images/desctop-olga1x.webp 1x, ./images/desctop-olga@2x.webp 2x"
+                  srcset="./images/olga-desktop.webp 1x, ./images/olga-desktop@2x.webp 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/desctop-olga1x.jpg 1x, ./images/desctop-olga@2x.jpg 2x"
+                  srcset="./images/olga-desktop.jpg 1x, ./images/olga-desktop@2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/tablet-olga1x.webp 1x, ./images/tablet-olga@2x.jpg 2x"
+                  srcset="./images/olga-tablet.webp 1x, ./images/olga-tablet@2x.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="./images/tablet-olga1x.jpg 1x, ./images/tablet-olga@2x.jpg"
+                  srcset="./images/olga-tablet.jpg 1x, ./images/olga-tablet@2x.jpg 2x"
                   media="(min-width: 768px)"
                 />
-                <source
-                  srcset="./images/smart-olga1x.webp 1x, ./images/smart-olga@2x.webp 2x"
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="./images/smart-olga1x.jpg 1x, ./images/smart-olga@2x.jpg 2x"
-                  media="(min-width: 320px)"
-                />
-                <img src="./images/smart-olga1x.jpg" alt="фото Ольги Репиной" />
+                <source srcset="./images/olga.webp 1x, ./images/olga@2x.webp 2x" media="(min-width: 320px)" />
+                <source srcset="./images/olga.jpg 1x, ./images/olga@2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/olga.jpg" alt="фото Ольги Репиной" />
               </picture>
               <div class="card-content">
                 <h3 class="card-title">Ольга Репина</h3>
@@ -249,30 +234,24 @@
             <li class="team-card">
               <picture>
                 <source
-                  srcset="./images/desctop-nikolay1x.webp 1x, ./images/desctop-nikolay@2x.webp 2x"
+                  srcset="./images/nikolay-desktop.webp 1x, ./images/nikolay-desktop@2x.webp 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/desctop-nikolay1x.jpg 1x, ./images/desctop-nikolay@2x.jpg 2x"
+                  srcset="./images/nikolay-desktop.jpg 1x, ./images/nikolay-desktop@2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/tablet-nikolay1x.webp 1x, ./images/tablet-nikolay@2x.jpg 2x"
+                  srcset="./images/nikolay-tablet.webp 1x, ./images/nikolay-tablet@2x.webp 2x"
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="./images/tablet-nikolay1x.jpg 1x, ./images/tablet-nikolay@2x.jpg"
+                  srcset="./images/nikolay-tablet.jpg 1x, ./images/nikolay-tablet@2x.jpg"
                   media="(min-width: 768px)"
                 />
-                <source
-                  srcset="./images/smart-nikolay1x.webp 1x, ./images/smart-nikolay@2x.webp 2x"
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="./images/smart-nikolay1x.jpg 1x, ./images/smart-nikolay@2x.jpg 2x"
-                  media="(min-width: 320px)"
-                />
-                <img src="./images/smart-nikolay1x.jpg" alt="фото Николая Тарасова" />
+                <source srcset="./images/nikolay.webp 1x, ./images/nikolay@2x.webp 2x" media="(min-width: 320px)" />
+                <source srcset="./images/nikolay.jpg 1x, ./images/nikolay@2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/nikolay.jpg" alt="фото Николая Тарасова" />
               </picture>
               <div class="card-content">
                 <h3 class="card-title">Николай Тарасов</h3>
@@ -312,30 +291,24 @@
             <li class="team-card">
               <picture>
                 <source
-                  srcset="./images/desctop-mihail1x.webp 1x, ./images/desctop-mihail@2x.webp 2x"
+                  srcset="./images/mihail-desktop.webp 1x, ./images/mihail-desktop@2x.webp 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/desctop-mihail1x.jpg 1x, ./images/desctop-mihail@2x.jpg 2x"
+                  srcset="./images/mihail-desktop.jpg 1x, ./images/mihail-desktop@2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/tablet-mihail1x.webp 1x, ./images/tablet-mihail@2x.jpg 2x"
+                  srcset="./images/mihail-tablet.webp 1x, ./images/mihail-tablet@2x.webp 2x"
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="./images/tablet-mihail1x.jpg 1x, ./images/tablet-mihail@2x.jpg"
+                  srcset="./images/mihail-tablet.jpg 1x, ./images/mihail-tablet@2x.jpg"
                   media="(min-width: 768px)"
                 />
-                <source
-                  srcset="./images/smart-mihail1x.webp 1x, ./images/smart-mihail@2x.webp 2x"
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="./images/smart-mihail1x.jpg 1x, ./images/smart-mihail@2x.jpg 2x"
-                  media="(min-width: 320px)"
-                />
-                <img src="./images/smart-mihail1x.jpg" alt="фото Михаила Ермакова" />
+                <sour srcset="./images/mihail.webp 1x, ./images/mihail@2x.webp 2x" media="(min-width: 320px)" />
+                <source srcset="./images/mihail.jpg 1x, ./images/mihail@2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/mihail.jpg" alt="фото Михаила Ермакова" />
               </picture>
               <div class="card-content">
                 <h3 class="card-title">Михаил Ермаков</h3>
