изображения, mobile меню

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
           </ul>
         </div>
       </div>
+      <div>
+        <button class="menu-btn">
+          <!-- <svg menu-icon>
+            <use href="./images/sprite.svg#icon-menu"></use>
+          </svg> -->
+        </button>
+      </div>
     </header>
     <main>
       <section class="hero">
