--- a/index.html
+++ b/index.html
@@ -43,13 +43,35 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div>
         <button class="menu-btn">
-          <!-- <svg menu-icon>
-            <use href="./images/sprite.svg#icon-menu"></use>
-          </svg> -->
+          <svg width="24" height="20">
+            <use class="open-menu-icon" href="./images/sprite.svg#icon-menu"></use>
+            <use class="close-menu-icon" href="./images/sprite.svg#icon-close-menu"></use>
+          </svg>
         </button>
+        <div class="header-menu">
+          <nav class="menu-nav">
+            <ul class="nav-item">
+              <li class="nav-link"><a href="index.html" class="current">Студия</a></li>
+              <li class="nav-link"><a href="portfolio.html">Портфолио</a></li>
+              <li class="nav-link"><a href="">Контакты</a></li>
+            </ul>
+          </nav>
+          <ul class="menu-contacts">
+            <li class="contacts-item">
+              <svg class="contacts-svg">
+                <use href="./images/sprite.svg#icon-envelope-icon"></use>
+              </svg>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="contacts-item">
+              <svg class="contacts-svg">
+                <use href="./images/sprite.svg#icon-phone-icon"></use>
+              </svg>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
