--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
         <div class="header-menu">
           <nav class="menu-nav">
             <ul class="nav-item">
-              <li class="nav-link"><a href="index.html" class="current">Студия</a></li>
-              <li class="nav-link"><a href="portfolio.html">Портфолио</a></li>
+              <li class="nav-link"><a href="index.html">Студия</a></li>
+              <li class="nav-link"><a href="portfolio.html" class="current">Портфолио</a></li>
               <li class="nav-link"><a href="">Контакты</a></li>
             </ul>
           </nav>
