--- a/index.html
+++ b/index.html
@@ -126,19 +126,31 @@
           <ul class="work-examples">
             <li class="example-item">
               <div class="overlay-box">
-                <img src="./images/img1.jpg" width="370" height="294" alt="" />
+                <picture>
+                  <source srcset="./images/desktopapp.webp 1x, ./images/desktopapp@2x.webp 2x" />
+                  <source srcset="./images/desktopapp.jpg 1x, ./images/desktopapp@2x.jpg 2x" />
+                  <img src="./images/desktopapp.jpg" width="370" height="294" alt="" />
+                </picture>
                 <p class="overlay-text">Десктопные приложения</p>
               </div>
             </li>
             <li class="example-item">
               <div class="overlay-box">
-                <img src="./images/img2.jpg" width="370" height="294" alt="" />
+                <picture>
+                  <source srcset="./images/mobapp.webp 1x, ./images/mobapp@2x.webp 2x" />
+                  <source srcset="./images/mobeapp.jpg 1x, ./images/mobapp@2x.jpg 2x" />
+                  <img src="./images/mobapp.jpg" width="370" height="294" alt="" />
+                </picture>
                 <p class="overlay-text">Мобильные приложения</p>
               </div>
             </li>
             <li class="example-item">
               <div class="overlay-box">
-                <img src="./images/img3.jpg" width="370" height="294" alt="" />
+                <picture>
+                  <source srcset="./images/design.webp 1x, ./images/design@2x.webp 2x" />
+                  <source srcset="./images/design.jpg 1x, ./images/design@2x.jpg 2x" />
+                  <img src="./images/design.jpg" width="370" height="294" alt="" />
+                </picture>
                 <p class="overlay-text">Дизайнерские решения</p>
               </div>
             </li>
