--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,13 @@
             </li>
           </ul>
         </div>
-        <button class="menu-btn">
+        <button class="menu-btn" aria-expanded="false" aria-controls="header-menu" data-menu-button>
           <svg width="24" height="20">
             <use class="open-menu-icon" href="./images/sprite.svg#icon-menu"></use>
             <use class="close-menu-icon" href="./images/sprite.svg#icon-close-menu"></use>
           </svg>
         </button>
-        <div class="header-menu">
+        <div class="header-menu" data-menu>
           <nav class="menu-nav">
             <ul class="nav-item">
               <li class="nav-link"><a href="index.html">Студия</a></li>
@@ -492,5 +492,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
