--- a/portfolio.html
+++ b/portfolio.html
@@ -91,22 +91,22 @@
                   <picture>
                     <!-- ПРОВЕРИТЬ ИЗОБРАЖЕНИЯ 2x -->
                     <source
-                      srcset="./images/techno-desktop.webp 1x, techno-desktop@2x.webp 2x"
+                      srcset="./images/techno-desktop.webp 1x, ./images/techno-desktop@2x.webp 2x"
                       media="(min-width: 1200px)"
                     />
                     <source
-                      srcset="./images/techno-desktop.jpg 1x, techno-desktop@2x.jpg 2x"
+                      srcset="./images/techno-desktop.jpg 1x, ./images/techno-desktop@2x.jpg 2x"
                       media="(min-width: 1200px)"
                     />
                     <source
-                      srcset="./images/techno-tablet.webp 1x, techno-tablet@2x.webp 2x"
+                      srcset="./images/techno-tablet.webp 1x, ./images/techno-tablet@2x.webp 2x"
                       media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./images/techno-tablet.jpg 1x, techno-desktop@2x.jpg 2x"
+                      srcset="./images/techno-tablet.jpg 1x, ./images/techno-desktop@2x.jpg 2x"
                       media="(min-width: 768px)"
                     />
-                    <source srcset="./images/techno.webp 1x, techno@2x.webp 2x" media="(min-width: 320px)" />
+                    <source srcset="./images/techno.webp 1x, ./images/techno@2x.webp 2x" media="(min-width: 320px)" />
                     <source srcset="./images/techno.jpg 1x, ./images/techno@2x.jpg 2x" media="(min-width: 320px)" />
                     <img src="./images/techno.jpg" alt="" />
                   </picture>
