исправляет путь для изображений

--- a/portfolio.html
+++ b/portfolio.html
@@ -121,32 +121,34 @@
                 </div>
               </a>
             </li>
-            <!-- CHECK 2X -->
             <li class="gallery-item">
               <a href="#" class="item-box">
                 <div class="overlay-box">
                   <picture>
                     <source
-                      srcset="./images/neworlean-desktop.webp 1x, neworlean-desktop@2x.webp 2x"
+                      srcset="./images/neworlean-desktop.webp 1x, ./images/neworlean-desktop@2x.webp 2x"
                       media="(min-width: 1200px)"
                     />
                     <source
-                      srcset="./images/neworlean-desktop.jpg 1x, neworlean-desktop@2x.jpg 2x"
+                      srcset="./images/neworlean-desktop.jpg 1x, ./images/neworlean-desktop@2x.jpg 2x"
                       media="(min-width: 1200px)"
                     />
                     <source
-                      srcset="./images/neworlean-tablet.webp 1x, neworlean-tablet@2x.webp 2x"
+                      srcset="./images/neworlean-tablet.webp 1x, ./images/neworlean-tablet@2x.webp 2x"
                       media="(min-width: 768px)"
                     />
                     <source
-                      srcset="./images/neworlean-tablet.jpg 1x, neworlean-tablet@2x.jpg 2x"
+                      srcset="./images/neworlean-tablet.jpg 1x, ./images/neworlean-tablet@2x.jpg 2x"
                       media="(min-width: 768px)"
                     />
                     <source
                       srcset="./images/neworlean.webp 1x, ./images/neworlean@2x.webp 2x"
                       media="(min-width: 320px)"
                     />
-                    <source srcset="./images/neworlean.jpg 1x, neworlean@2x.jpg 2x" media="(min-width: 320px)" />
+                    <source
+                      srcset="./images/neworlean.jpg 1x, ./images/neworlean@2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
                     <img src="./images/neworlean.jpg" alt="" />
                   </picture>
                   <div class="overlay">
